# desifit-agent

./: .gitignore  LICENSE  README.md  grocery_list.json  meal_plan.json  pyproject.toml  requirements.txt  run_all.py  session_profile.json  workout_plan.json
src/agents/: coordinator.py  diet_agent.py  grocery_agent.py  workout_agent.py
src/cli/: generate_plan.py  onboard.py
src/core/: calorie_calc.py  user_profile.py
src/tools/: nutrition_api_stub.py  recipe_templates.py
tests/: test_calorie_calc.py  test_diet_agent.py
tests/tests/: test_meal_plan.py
